# Dookan-Ecommerce

./: AGENTS.md  CLAUDE.md  FEATURE_ASSESSMENT.md  README.md  SCALE_AUDIT.md  docker-compose.yml  todo.md
admin/: .dockerignore  (+6 more)
backend/: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.prod  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  start.sh  todo.md
backend/authentication/: serializers.py  urls.py  views.py
backend/core/: settings.py  urls.py
backend/coupons/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/docs/: create-vendor-owner.md
backend/expenses/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/inventory/: admin.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/orders/: admin.py  dashboard.py  filters.py  invoices.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/products/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/sales/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/store/: admin.py  meta.py  meta_oauth.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/users/: admin.py  managers.py  models.py  serializers.py  urls.py  views.py
backend/utils/: email.py  models.py  otp.py  permissions.py  tasks.py
backend/vendors/: admin.py  apps.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/wishlists/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
(+407 files in other folders)
